[package]
name = "axum-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros"] }
lazy-regex = "3.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.9"
